# DataConnect-RAG-Chatbot

./: .gitignore  README.md
.github/workflows/: lint-check.yaml
backend/: .env.example  .pre-commit-config.yaml  README.md  config.py  dependencies.py  main.py  pyproject.toml  requirements.txt  schemas.py  utils.py
backend/controllers/: __init__.py  chat.py
backend/controllers/integrations/: __init__.py  airtable.py  hubspot.py  notion.py
backend/integrations/: airtable.py  hubspot.py  notion.py
backend/rag/: __init__.py
backend/repositories/: redis.py
backend/repository/: __init__.py
backend/services/: __init__.py  ai.py
backend/services/integrations/: __init__.py  airtable.py  base.py  hubspot.py  notion.py
frontend/: package-lock.json  package.json
frontend/src/: bot.js  data-form.js  integration-form.js
frontend/src/integrations/: airtable.js  hubspot.js  notion.js
